# lab06

./: CMakeLists.txt  CPack.cmake
.github/workflows/: Build.yml  tag2.yml  tags.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_app/: CMakeLists.txt
solver/: CMakeLists.txt
solver_lib/: CMakeLists.txt
solver_lib/d/: solver.cpp
